--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
                 <p id="question"></p>
             </h1>
         </div>
-        <div class="container" id="questionCard">
+        <div class="container" id="questionCard1">
             <p id="q1"></p>
         </div>
-        <div class="container" id="questionCard">
+        <div class="container" id="questionCard2">
                 <p id="q2"></p>
         </div>
-        <div class="container" id="questionCard">
+        <div class="container" id="questionCard3">
                 <p id="q3"></p>
         </div>
-        <div class="container" id="questionCard">
+        <div class="container" id="questionCard4">
                 <p id="q4"></p>
         </div>
-
     </div>
+  
 
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
