Complete game with reset
no timer yet

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body>
+<body id="page">
     <div class="container" id="start">
         <div class="jumbotron">
             <h1 class="text-center">
